# cmd-iaso

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  cmd-iaso-docker.py  command-line-extensions.sh  config.default  main.py  pyproject.toml  requirements.txt  setup.py  tests.py  tox.ini
.github/workflows/: black.yml  dockerimage.yml  python.yml  rust.yml
athena/: Cargo.toml  demo.py  pyproject.toml
athena/metis/src/: lib.rs
athena/src/: lib.rs  packing.rs  tests.rs  tokeniser.rs
athena/src/shared_fragment_tree/: mod.rs
athena/src/shared_fragment_tree/extract/: combination.rs  common.rs  mod.rs
athena/src/shared_fragment_tree/extract/shared/: mod.rs  parallel.rs  sequential.rs
athena/src/shared_fragment_tree/pickle/: mod.rs  packing.rs
athena/src/shared_fragment_tree/pickle/packing/: mod.rs  reader.rs  size.rs  tests.rs  writer.rs
athena/tests/: demo.py
iaso/: __remove__cli.py  cli.py  click.py  curation.py  datamine.py  dump2datamine.py  environment.py  format_json.py  json_schema_file.py  jsondb.py  namespace_ids.py  registry.py  utils.py  valid_luis.py
iaso/analysis/: __init__.py  common_fragments.py  dump2pings.py  shared_fragments.py  suffix_tree.py  tokenise.py
iaso/cli/: __init__.py  __main__.py  analyse.py  dedup4institutions.py  dump2datamine.py  environment.py  jobs.py  logs2luis.py  proxy3.py  registry.py  scrape.py
iaso/click/: aprompt.py  chrome.py  coroutine.py  docker.py  lazy.py  mutex.py  registry.py  validators.py
iaso/curation/: __init__.py  __remove_statistics.py  error.py  generator.py  institutions.py  institutions_session.py  interact.py  launch.py  pyppeteer.py  resources.py  resources_session.py  session.py  tag_store.py  terminal.py  validator.py
iaso/institutions/: __init__.py  academine.py  differences.py  institution_entity_extraction.py  institution_entity_linking.py  named_entity_recognition.py  validator.py  wikidataclient.py
iaso/lazy_json/: __init__.py  decoder.py  error.py  re.py  scanner.py  string.py
iaso/scraping/: __init__.py  backup.py  content_type.py  datamine.py  ftp.py  pool.py  (+2 more)
metis/: .gitignore  Cargo.toml
tests/: test_athena.py  test_cli.py
(+88 files in other folders)
