[package]
name = "athena"
version = "0.1.0"
authors = ["Moritz Langenstein <moritz.langenstein17@imperial.ac.uk>"]
edition = "2018"

[lib]
name = "athena"
crate-type = ["cdylib"]

[dependencies]
metis = { path = "../metis" }
bit-set = "0.5.2"
pyo3 = "0.11.1"
bincode = "1.3.1"
rand = "0.7.3"
rayon = "1.3.1"

[features]
default = ["pyo3/extension-module"]
