[package]
name = "athena"
version = "0.1.0"
authors = ["Moritz Langenstein <moritz.langenstein17@imperial.ac.uk>"]
edition = "2018"

[lib]
name = "athena"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.1"
bytecount = "0.6.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
metis = { path = "../metis" }
# pyo3 = "0.11.1"
rand = "0.7.3"
rayon = "1.3.1"
regex = "1.3.9"
serde_json = "1.0.57"

[dependencies.html2text]
git = "https://github.com/MoritzLangenstein/rust-html2text.git"
rev = "dadfb0e"

[dependencies.pyo3]
git = "https://github.com/PyO3/pyo3.git"
rev = "9ab7225"

[features]
default = ["pyo3/extension-module"]
